# batuta

./: .clippy.toml  .dockerignore  .gitignore  .gitlab-ci.yml  .mutants.toml  .pmat-gates.toml  .pmat-metrics.toml  .pmat.yaml  .pre-commit-config.yaml  BATUTA-007-COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Cargo.toml  Dockerfile  Dockerfile.dev  FALSIFICATION_SWEEP.md  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  IMPLEMENTATION.md  Makefile  PMAT_BUG_REPORT.md  README.md  batuta.toml  build.rs  deny.toml  docker-compose.yml  justfile  lcov.info  mutation_results_backend.txt  mutation_results_converters.txt  renacer.toml
.cargo/: config.toml
.claude/: plan.md
.claude/commands/: quality.md  stack-check.md  stack-versions.md  update-deps.md
.github/workflows/: agent-quality.yml  benchmarks.yml  book.yml  certeza.yml  ci.yml  deploy-book.yml  docker.yml  mutation-testing.yml  nightly.yml  wasm.yml
.pmat/: baseline.json  bug-hunter-baseline.json  bug-hunter-trend.json  bug-hunter.toml  project.toml
.pmat-metrics/: commit-0f8e667-meta.json  commit-1bf0819-meta.json  commit-387a985-meta.json  commit-501e735-meta.json  commit-5a3798f-meta.json  commit-72c23bf-meta.json  commit-831aebe-meta.json  commit-8803cc2-meta.json  commit-8f0b621-meta.json  commit-919cd78-meta.json  commit-e628d69-meta.json  deny-status.json  lint-status.json
.pmat/bug-hunter-cache/: 119c184dc97191d3.json  9703cf02a573ed6a.json  b4312073578f6f7e.json  c45433c536601571.json  cad26347b345dab9.json  d5ff5eadb03d9948.json  e25da52c902f7dd5.json
.pmat/metrics/: dependencies.json
benches/: backend_selection.rs  converter_performance.rs
book/: README.md  book.toml
book/.pmat-metrics/: commit-398733e-meta.json  commit-aadbc76-meta.json  commit-f4e9d27-meta.json
book/src/: SUMMARY.md  introduction.md
contracts/: agent-loop-v1.yaml  batch-orchestration-v1.yaml  matmul-v1.yaml  quantize-v1.yaml  tokenize-v1.yaml
contracts/banco/: binding.yaml  budget-conservation-v1.yaml  context-enforcement-v1.yaml  privacy-enforcement-v1.yaml  routing-determinism-v1.yaml  template-correctness-v1.yaml
docs/: DOCKER.md  STABILIZATION-ROADMAP.md  batuta-graph-viz-tui-spec.md  design-by-contract.md  qa-results-2025-12-06.md
docs/adr/: ADR-001-dependency-health-exemption.md  ADR-002-ollama-style-cli-location.md
docs/reviews/: APR-POWERED-RAG-ORACLE-REVIEW.md  BATUTA-STACK-SPEC-REVIEW.md  CONTENT-CREATION-TOOLING-REVIEW.md  DATA-PLATFORMS-INTEGRATION-REVIEW.md  DATA-VISUALIZATION-INTEGRATION-REVIEW.md  HUGGING-FACE-INTEGRATION-REVIEW.md  MODEL-SERVING-ECOSYSTEM-REVIEW.md  STACK-TREE-VIEW-REVIEW.md
docs/roadmaps/: roadmap.yaml  roadmap.yaml.bak
docs/specifications/: apr-powered-rag-oracle.md  batuta-agent.md  batuta-orchestration-decy-depyler-trueno-aprender-realizar-ruchy-spec.md  batuta-spec.md  batuta-stack-0.1-100-point-qa-checklist.md  bug-hunter-pmat-quality-integration.md  citl-cross-language-spec.md  code-snippets.md  data-platforms-integration-spec-query.md  data-visualization-integration-query.md  hugging-face-crud-spec.md  improve-oracle.md  model-serving-ecosystem-spec.md  oracle-mode-spec.md  pmat-query-batuta-oracle-integration.md  popperian-falsification-checklist.md  retriever-spec.md  score-a-plus-spec.md  sovereign-ai-spec.md  sqlite-rag-integration.md  stack-quality-matrix-spec.md  stack-tree-view.md  stack-visualization-diagnostics-reporting.md
examples/: agent-full.toml  agent.toml  agent_contracts.rs  agent_demo.rs  agent_guard.rs  agent_memory.rs  agent_pool.rs  agent_routing.rs  agent_signing.rs  backend_selection.rs  bug_hunter_demo.rs  content_demo.rs  custom_plugin.rs  design_by_contract.rs  full_transpilation.rs  graph_tui_demo.rs  hf_catalog_demo.rs  int8_rescore_demo.rs  mcp_demo.rs  moe_routing.rs  multi_machine_demo.rs  numpy_conversion.rs  oracle_demo.rs  oracle_local_demo.rs  parf_analysis.rs  pepita_kernel_demo.rs  pipeline_demo.rs  playbook_demo.rs  pmat_query_demo.rs  publish_status_demo.rs  pytorch_conversion.rs  rag_oracle_demo.rs  rag_profiling_demo.rs  repartir_distributed.rs  serve_demo.rs  sklearn_conversion.rs  sovereign_stack_e2e.rs  stack_comply_demo.rs  stack_diagnostics_demo.rs  stack_dogfood.rs  (+6 more)
examples/migrations/: README.md
examples/wasm/: README.md  index.html
golden_traces/: ANALYSIS.md  backend_selection_source.json  backend_selection_summary.txt  full_transpilation_summary.txt  oracle_demo.json  oracle_demo_source.json  oracle_demo_summary.txt  pipeline_demo_summary.txt
scripts/: build-wasm.sh  capture_golden_traces.sh  docker-build.sh
src/: analyzer.rs  analyzer_tests.rs  ansi_colors.rs  audit.rs  backend.rs  backend_tests.rs  batuta_contracts.rs  cli.rs  config.rs  experiment.rs  generated_contracts.rs  lib.rs  main.rs  main_cli.rs  main_dispatch.rs  main_drift.rs  main_oracle_args.rs  main_oracle_dispatch.rs  numpy_converter.rs  parf.rs  parf_tests.rs  pipeline.rs  pipeline_analysis.rs  plugin.rs  pytorch_converter.rs  recipes.rs  report.rs  report_style.css  report_tests.rs  sklearn_converter.rs  timing.rs  tools.rs  types.rs  verification_specs.rs  wasm.rs
src/.pmat/: dead-code-cache.json
src/agent/: capability.rs  code.rs  code_prompts.rs  code_tests.rs  code_tests_falsification.rs  contracts.rs  guard.rs  guard_tests.rs  manifest.rs  manifest_tests.rs  manifest_tests_discovery.rs  manifest_tests_validation.rs  mod.rs  phase.rs  pool.rs  pool_tests.rs  repl.rs  repl_display.rs  repl_tests.rs  result.rs  runtime.rs  runtime_helpers.rs  runtime_tests.rs  runtime_tests_advanced.rs  runtime_tests_guards.rs  runtime_tests_multi_turn.rs  session.rs  signing.rs  tui.rs  tui_render.rs
src/bug_hunter/: blame.rs  cache.rs  config.rs  contracts.rs  coverage.rs  defect_patterns.rs  diff.rs  languages.rs  localization.rs  mod.rs  model_parity.rs  modes_analyze.rs  modes_falsify.rs  modes_fuzz.rs  modes_hunt.rs  patterns.rs  spec.rs  (+10 more)
tests/: agent_integration.rs  banco_browser.rs  banco_coverage.rs  banco_endpoints.rs  banco_llm.rs  banco_loadtest.rs  banco_workflows.rs  code_smoke.rs  cuda_edge_cases.rs  integration_test.rs
(+700 files in other folders)
